--- a/QuickZip/ClientApp/app/master/user/user.component.html
+++ b/QuickZip/ClientApp/app/master/user/user.component.html
@@ -98,7 +98,7 @@
             </table>
 
         </div>
-        <div class="col-md-12 col-sm-12 col-xs-12" id="divForm" *ngIf="formid">
+        <div class="col-md-12 col-sm-12 col-xs-12" id="divForm" *ngIf="formid">Modal
             <form [formGroup]="UserForm" autocomplete="off">
                 <div id="accordion">
                     <div class="card">
@@ -634,7 +634,7 @@
         </div>
     </div>
 
-    <div class="modal userlistpop" id="myModal" [style.display]="showModal ? 'block' : 'none'">
+    <div class="modal userlistpop" id="myModal" >
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
 
@@ -718,7 +718,7 @@
             </div>
         </div>
     </div>
-    <div class="modal alertpop" id="myModal" [style.display]="showModalalert ? 'block' : 'none'">
+    <div class="modal alertpop" id="myModal" >
         <div class="modal-dialog">
             <div class="modal-content">
 
