--- a/QuickZip/ClientApp/app/master/user/user.component.html
+++ b/QuickZip/ClientApp/app/master/user/user.component.html
@@ -718,7 +718,8 @@
             </div>
         </div>
     </div>
-    <div class="modal alertpop" id="myModal" [style.display]="showModalalert ? 'block' : 'none'">
+    <div class="modal alertpop" id="myModal">
+        <!--[style.display]="showModalalert ? 'block' : 'none'">-->
         <div class="modal-dialog">
             <div class="modal-content">
 
