--- a/QuickZip/ClientApp/app/master/user/user.component.html
+++ b/QuickZip/ClientApp/app/master/user/user.component.html
@@ -71,10 +71,6 @@
             </div>
 
         </div>
-
-        <div class="col-md-12 col-sm-12 col-xs-12 loaderposition" id="divLoarder" *ngIf="Preloader">
-            <img src="../../ClientApp/assets/images/loader.gif" style="margin-left: 45%;margin-top: 19%;" />
-        </div>
         <div class="col-md-12 col-sm-12 col-xs-12" id="tbldiv" *ngIf="tableid">
             <table>
                 <thead>
@@ -124,11 +120,11 @@
                                             </label>
                                             <div id="User" class="col-sm-7 col-md-7 col-xs-7 no-padding-left radio displayinlineblock" [ngClass]="displayFieldCss('Type')">
                                                 <label class="lblradiobtnss col-md-5 col-sm-4 col-xs-6">
-                                                    <input name="Type" value="u" type="radio" formControlName="Type" (click)="userClick()" #Type />
+                                                    <input name="Type" value="u" type="radio" formControlName="Type" (click)="userClick()" />
                                                     <span>User</span>
                                                 </label>
                                                 <label class="lblradiobtnss col-md-6 col-sm-6 col-xs-6">
-                                                    <input name="Type" value="a" type="radio" formControlName="Type" (click)="adminClick()" #Type />
+                                                    <input name="Type" value="a" type="radio" formControlName="Type" (click)="adminClick()" />
                                                     <span>Administrator</span>
                                                 </label>
                                             </div>
@@ -232,12 +228,12 @@
                                             <div class="col-sm-10 col-md-10 col-xs-7 no-padding-left displayinlineblock">
                                                 <!--<input type="text" class="col-sm-12 col-md-12 col-xs-12 no-padding  spneser bankcodeposition" />-->
                                                 <!--<ng-multiselect-dropdown formControlName="sponsorbankcode"  [ngClass]="displayFieldCss('sponsorbankcode')" name="sponsorcode"
-                                                [placeholder]="'Select'"
+                                                    [placeholder]="'Select'"
 
-                                                [data]="sponsorbankcode"
-                                                [settings]="dropdownSettings">
+                                                    [data]="sponsorbankcode"
+                                                    [settings]="dropdownSettings">
 
-                                            </ng-multiselect-dropdown>-->
+                                                </ng-multiselect-dropdown>-->
                                                 <select class="col-sm-12 col-md-12 col-xs-12 no-padding  spneser bankcodeposition" formControlName="sponsorbankcode" [ngClass]="displayFieldCss('sponsorbankcode')" name="sponsorbankcode">
                                                     <option value="0">--Select--</option>
 
@@ -441,7 +437,7 @@
                                                                 </label>
                                                             </div>
                                                         </div>
-                                                        <label class="col-md-10 col-sm-10 col-xs-12 " style=" color: #e72d2d; font-size: 12px; display:none">All users selected</label>
+                                                        <label class="col-md-10 col-sm-10 col-xs-12 " style=" color: #e72d2d; font-size: 12px" *ngIf="lblalluser">All users selected</label>
                                                     </div>
 
                                                     <div id="divplusicon" *ngIf="divplusicon">
@@ -549,11 +545,11 @@
                                                                         </label>
 
                                                                         <!--<div class="col-md-2 col-sm-2 col-xs-12 no-padding">
-                                                                        <input type="checkbox" id="bulkemandate" style="clear: both" class="pull-left" value="28" />
-                                                                        <label class=" col-md-10 col-xs-10 col-sm-10 no-padding-right control-label">
-                                                                            Emandate
-                                                                        </label>
-                                                                    </div>-->
+                                                                            <input type="checkbox" id="bulkemandate" style="clear: both" class="pull-left" value="28" />
+                                                                            <label class=" col-md-10 col-xs-10 col-sm-10 no-padding-right control-label">
+                                                                                Emandate
+                                                                            </label>
+                                                                        </div>-->
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -562,14 +558,14 @@
                                                     </div>
                                                 </div>
                                                 <!--<div class="col-md-10 col-sm-10 col-xs-12 no-padding" style="display: none;" id="div2">
-                                                <div class="form-group">
-                                                    <label class="col-sm-2 col-md-2 col-xs-4 control-label no-padding " for="form-field-1">
-                                                    </label>
-                                                    <div class="col-sm-10 col-md-10 col-xs-7 no-padding" id="div3" style="display: none;">
-                                                        <input type="text" id="Text1" onchange="RemoveClass();" class="col-sm-12 col-md-12 col-xs-12 viewrowmargin no-padding" />
+                                                    <div class="form-group">
+                                                        <label class="col-sm-2 col-md-2 col-xs-4 control-label no-padding " for="form-field-1">
+                                                        </label>
+                                                        <div class="col-sm-10 col-md-10 col-xs-7 no-padding" id="div3" style="display: none;">
+                                                            <input type="text" id="Text1" onchange="RemoveClass();" class="col-sm-12 col-md-12 col-xs-12 viewrowmargin no-padding" />
+                                                        </div>
                                                     </div>
-                                                </div>
-                                            </div>-->
+                                                </div>-->
                                             </div>
 
                                             <div id="dvVideos" *ngIf="dvVideos" class=" col-sm-12 col-xs-12 col-md-12 no-padding">
@@ -591,37 +587,37 @@
                                                                     </div>
                                                                 </div>
                                                                 <!--<div class="col-md-2 col-sm-2 col-xs-12 no-padding">
-                                                                <input type="checkbox" id="emandatedemo" style="clear: both" class="pull-left" value="26" />
-                                                                <label class=" col-md-10 col-xs-10 col-sm-10 no-padding-right control-label">
-                                                                    Emandate
-                                                                </label>
-                                                            </div>-->
+                                                                    <input type="checkbox" id="emandatedemo" style="clear: both" class="pull-left" value="26" />
+                                                                    <label class=" col-md-10 col-xs-10 col-sm-10 no-padding-right control-label">
+                                                                        Emandate
+                                                                    </label>
+                                                                </div>-->
                                                                 <!--<div class="col-md-2 col-sm-2 col-xs-12 no-padding">
-                                                                <input onclick="RemoveClass();" type="checkbox" name="rdoAccess" id="bulkphysicaldemo"
-                                                                       class="pull-left" value="1" />
-                                                                <label class=" col-md-10 col-xs-10 col-sm-10 no-padding-right control-label">
-                                                                    Bulk Physical
-                                                                </label>
-                                                            </div>
-                                                            <div class="col-md-2 col-sm-2 col-xs-12 no-padding">
-                                                                <input type="checkbox" id="bulkemandatedemo" style="clear: both" class="pull-left" />
-                                                                <label class=" col-md-10 col-xs-10 col-sm-10 no-padding-right control-label">
-                                                                    Bulk Emandate
-                                                                </label>
-                                                            </div>-->
+                                                                    <input onclick="RemoveClass();" type="checkbox" name="rdoAccess" id="bulkphysicaldemo"
+                                                                           class="pull-left" value="1" />
+                                                                    <label class=" col-md-10 col-xs-10 col-sm-10 no-padding-right control-label">
+                                                                        Bulk Physical
+                                                                    </label>
+                                                                </div>
+                                                                <div class="col-md-2 col-sm-2 col-xs-12 no-padding">
+                                                                    <input type="checkbox" id="bulkemandatedemo" style="clear: both" class="pull-left" />
+                                                                    <label class=" col-md-10 col-xs-10 col-sm-10 no-padding-right control-label">
+                                                                        Bulk Emandate
+                                                                    </label>
+                                                                </div>-->
                                                             </div>
                                                         </div>
                                                     </div>
                                                 </div>
                                                 <!--<div class="col-md-10 col-sm-10 col-xs-12 no-padding" style="display: none;" id="div4">
-                                                <div class="form-group">
-                                                    <label class="col-sm-2 col-md-2 col-xs-4 control-label no-padding " for="form-field-1">
-                                                    </label>
-                                                    <div class="col-sm-10 col-md-10 col-xs-7 no-padding" id="div5" style="display: none;">
-                                                        <input type="text" id="Text2" onchange="RemoveClass();" class="col-sm-12 col-md-12 col-xs-12 viewrowmargin no-padding" />
+                                                    <div class="form-group">
+                                                        <label class="col-sm-2 col-md-2 col-xs-4 control-label no-padding " for="form-field-1">
+                                                        </label>
+                                                        <div class="col-sm-10 col-md-10 col-xs-7 no-padding" id="div5" style="display: none;">
+                                                            <input type="text" id="Text2" onchange="RemoveClass();" class="col-sm-12 col-md-12 col-xs-12 viewrowmargin no-padding" />
+                                                        </div>
                                                     </div>
-                                                </div>
-                                            </div>-->
+                                                </div>-->
                                             </div>
 
                                         </div>
@@ -659,7 +655,7 @@
                             <table id="tbluserlist">
                                 <thead>
                                     <tr>
-                                        <th style="width:150px;"><input type="checkbox" name="all" id="chkalluserlist" (change)="isSelected = !isSelected">All</th>
+                                        <th style="width:150px;"><input type="checkbox" name="all" id="chkalluserlist" (click)="chkAllUser($event)" (change)="isSelected = !isSelected">All</th>
                                         <th style="width:300px;">Email Id</th>
                                         <th style="width:300px;">User Name</th>
 
@@ -667,7 +663,7 @@
                                 </thead>
                                 <tbody>
                                     <tr *ngFor="let data of nachuser; index as i" (click)="setSelectedRow(i)" [class.active]="i == selectedRow">
-                                        <td style="width:150px;"><input type="checkbox" class="chk" name="singlechk" [checked]="isSelected" (change)="checkSingleUser($event)" id={{data.UserId}}></td>
+                                        <td style="width:150px;"><input type="checkbox" class="chk" name="singlechk" [checked]="isSelected" (change)="checkSingleUser(data)" id={{data.UserId}}></td>
                                         <td style="display:none">{{data.UserId}}</td>
                                         <td style="width:300px;">{{data.EmailId}}</td>
                                         <td style="width:300px;">{{data.UserName}}</td>
@@ -679,7 +675,7 @@
 
                             </table>
                         </div>
-                        <button type="button" class="btn btn-success pull-right" style="margin-top:8px;" data-dismiss="modal" (click)="hide()">Submit</button>
+                        <button type="button" class="btn btn-success pull-right" style="margin-top:8px;" data-dismiss="modal" (click)="getUserlist()">Submit</button>
 
 
                     </div>
@@ -722,5 +718,32 @@
             </div>
         </div>
     </div>
+    <div class="modal alertpop" id="myModal" [style.display]="showModalalert ? 'block' : 'none'">
+        <div class="modal-dialog">
+            <div class="modal-content">
 
+                <!-- Modal Header -->
+                <div class="modal-header">
+                    <h4 class="modal-title">
+                        <img src="../../ClientApp/assets/images/caution2.png" style="height:62px" />
+
+
+                    </h4>
+                    <button type="button" class="close" data-dismiss="modal" (click)="hide()">&times;</button>
+                </div>
+
+                <!-- Modal body -->
+                <div class="modal-body">
+                    <p> User already exists</p>
+                    <button type="button" class="btn btn-success pull-right" data-dismiss="modal" (click)="hide()">Close</button>
+                </div>
+
+                <!-- Modal footer -->
+
+
+
+
+            </div>
+        </div>
+    </div>
 </div>
