--- a/QuickZip/ClientApp/app/master/nachtransactionpresentation/nachtransactionpresentation.component.html
+++ b/QuickZip/ClientApp/app/master/nachtransactionpresentation/nachtransactionpresentation.component.html
@@ -1,64 +1,109 @@
 <div class="main-content" id="maincontent">
     <div class="content">
-        <div class="col-md-12 col-sm-6 col-xs-4 contnt-wrapper">
+
+        <div class="col-md-12 col-sm-6 col-xs-4">
+
+
             <div class="col-sm-6 col-md-6 col-xs-3 no-padding">
-                <span class="legal">Transaction Presentment Files</span>
+                <span class="legal">Transaction Presentment Files </span>
             </div>
+
             <div class="rightmenu">
-                <div class="toolbar pull-right">
-                    <ul class="toolbar-content" style="display:none;">
+                <form FormGroup="">
+                    <div class="toolbar pull-right">
+                        <ul class="toolbar-content">
+
+
+                            <li id="btnNew">
+
+                                <i (click)="BankBind()" class="fa fa-reply" aria-hidden="true" title="Export"></i>
+                                <label>
+                                    New
+                                </label>
+                            </li>
 
 
 
-                        <li>
-                            <i class="fa fa-file-text" aria-hidden="true" title="New"></i>
-                            <label>
-                                New
-                            </label>
-                        </li>
-                        <li>
-                            <i class="fa fa-pencil-square-o" aria-hidden="true" title="Edit"></i>
-                            <label>
-                                Edit
-                            </label>
-                        </li>
-                        <li>
-                            <i class="fa fa-floppy-o" aria-hidden="true" title="Save"></i>
-                            <label>
-                                Save
-                            </label>
-                        </li>
-                        <li style="display: none">
-                            <i class="fa fa-key" aria-hidden="true" title="Reset Password"></i>
-                            <label>
-                                Reset Password
-                            </label>
-                        </li>
-                        <li style="display: none">
-                            <i class="fa fa-times" aria-hidden="true"
-                               title="Delete"></i>
-                            <label>
-                                Delete
-                            </label>
-                        </li>
-                        <li>
-                            <i class="fa fa-reply" aria-hidden="true" title="Back"></i>
-                            <label>
-                                Back
-                            </label>
-                        </li>
-                        <li>
-                            <i class="fa fa-bars" aria-hidden="true" title="Export"></i>
-                            <label>
-                                Previous Records
-                            </label>
-                        </li>
-                    </ul>
-                </div>
+
+
+
+                        </ul>
+                    </div>
+
+                </form>
             </div>
+
+
+
+
+
+
+
         </div>
 
-        <div class="col-md-12 col-sm-12 col-xs-12" id="tbldiv" style="display:none;">
+        <!--<div class="col-md-12 col-sm-6 col-xs-4 contnt-wrapper">
+        <div class="col-sm-6 col-md-6 col-xs-3 no-padding">
+            <span class="legal">Transaction Presentment Files</span>
+        </div>
+        <div class="rightmenu">
+            <div class="toolbar pull-right">
+                <input type="button" class=" btn btn-success" id="btnexcel"
+                       value="New" (click)="BankBind()" />
+                <ul class="toolbar-content" style="display:block;">
+
+
+
+                    <li id="btnNew">
+
+                        <i (click)="BankBind()" class="fa fa-reply" aria-hidden="true" title="Export"></i>
+                        <label>
+                            new
+                        </label>
+                    </li>
+                    <li>
+                        <i class="fa fa-pencil-square-o" aria-hidden="true" title="Edit"></i>
+                        <label>
+                            Edit
+                        </label>
+                    </li>
+                    <li>
+                        <i class="fa fa-floppy-o" aria-hidden="true" title="Save"></i>
+                        <label>
+                            Save
+                        </label>
+                    </li>
+                    <li style="display: none">
+                        <i class="fa fa-key" aria-hidden="true" title="Reset Password"></i>
+                        <label>
+                            Reset Password
+                        </label>
+                    </li>
+                    <li style="display: none">
+                        <i class="fa fa-times" aria-hidden="true"
+                           title="Delete"></i>
+                        <label>
+                            Delete
+                        </label>
+                    </li>
+                    <li>
+                        <i class="fa fa-reply" aria-hidden="true" title="Back"></i>
+                        <label>
+                            Back
+                        </label>
+                    </li>
+                    <li>
+                        <i class="fa fa-bars" aria-hidden="true" title="Export"></i>
+                        <label>
+                            Previous Records
+                        </label>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>-->
+        <!--<input type="button" class="col-md-2 col-sm-12 col-xs-12 btn btn-success" id=""
+           value="New" style="margin-right: 12%; margin-top: 2%; margin-bottom: 2%;float:right;" (click)="BankBind()" />-->
+        <div class="col-md-12 col-sm-12 col-xs-12" id="tbldiv" [style.display]="showlabel2 ? 'block' : 'none'">
             <table id="tblnachmandate">
                 <thead>
                     <tr>
@@ -80,19 +125,19 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td style="width:90px;">Demo</td>
+                    <tr *ngFor="let lang of bindmaingrid">
+                        <td style="width:90px;">{{lang.RowNumber}}</td>
+                        <td style="width:150px;">Demo</td>
+                        <td style="width:150px;">{{lang.FileNo}}</td>
+                        <td style="width:150px;">Demo</td>
+                        <td style="width:150px;">{{lang.UserName}}</td>
                         <td style="width:150px;">Demo</td>
                         <td style="width:150px;">Demo</td>
                         <td style="width:150px;">Demo</td>
                         <td style="width:150px;">Demo</td>
+                        <td style="width:150px;">{{lang.BankName}}</td>
                         <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
+                        <td style="width:150px;">{{lang.FileStatus}}</td>
 
 
                     </tr>
@@ -102,7 +147,7 @@
             </table>
 
         </div>
-        <form style="display:block;">
+        <form [style.display]="showlabel1 ? 'block' : 'none'">
             <div class="col-md-12 col-sm-12 col-xs-12 boxsetting">
                 <div class="col-md-12 col-sm-12 col-xs-12 boxhead">
                     <div class="row no-padding">
@@ -112,13 +157,13 @@
                                     Bank:
                                 </label>
                                 <div class="col-sm-6 col-md-7 col-xs-7 displayinlineblock">
-                                    <select id="" class="alldropdown" (change)="BindGridForm(25,86,10)">
+                                    <select id="" class="alldropdown" (change)="BindGridForm(25, 86, 10)">
                                         <option value="0">Select</option>
                                         <option *ngFor="let lang of bankbind"
                                                 value={{lang.SponsorBankCodeId}}>
                                             {{lang.SponsorBankCodeName}}
 
-</select>
+                                    </select>
                                 </div>
                             </div>
                         </div>
@@ -134,8 +179,8 @@
 
                         </div>
                     </div>
-                    <div class="row no-padding" *ngFor="let lang of bindgrid" >
-                        <div class="col-md-4 col-sm-4 col-xs-12" >
+                    <div class="row no-padding" *ngFor="let lang of bindgrid">
+                        <div class="col-md-4 col-sm-4 col-xs-12">
                             <div class="form-group">
                                 <label class="col-sm-6 col-md-4 col-xs-4 control-label no-padding" for="form-field-1">
                                     Bank Account Number:
@@ -197,7 +242,7 @@
         <div class="clearfix">
 
         </div>
-        <div class="col-md-12 col-sm-12 col-xs-12" id="tbldiv" style="display:block;margin-top: 10%;">
+        <div class="col-md-12 col-sm-12 col-xs-12" id="tbldiv" style="display:block;margin-top: 10%;" [style.display]="showlabel ? 'block' : 'none'">
 
             <div class="col-md-12 col-sm-12 no-padding">
                 <div class="row no-padding" style="height: 23px;">
@@ -217,7 +262,7 @@
                     <div class="col-md-4 col-sm-4 col-xs-12">
                         <ul class="toolbar-content" style="float: right;">
                             <li>
-                                <i class="fa fa-file-text" aria-hidden="true" title="New"></i>
+                                <i (click)="BindUMRN(); BindRefrence()" class="fa fa-reply" aria-hidden="true" title="Export"></i>
                                 <label>
                                     New
                                 </label>
@@ -259,9 +304,22 @@
                 <tbody>
                     <tr>
                         <td style="width:90px;"><input name="all" type="checkbox"></td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
-                        <td style="width:150px;">Demo</td>
+                        <td style="width:150px;">
+                            <select class="col-md-12 col-sm-12 col-xs-12" >
+                                <option value="0">Select</option>
+                                <option *ngFor="let lang of bindumrn">
+                                    {{lang.UMRN}}
+                              
+                            </select>
+                        </td>
+                        <td style="width:150px;">
+                            <select class="col-md-12 col-sm-12 col-xs-12" (change)="BindUMRNOnchange(95,13,'rrdtr')">
+                                <option value="0">Select</option>
+                                <option *ngFor="let lang of bindref">
+                                    {{lang.Refrence1}}
+</select>
+                        </td>
+                        <td style="width:150px;"><input type="text" style="width:100%"></td>
                         <td style="width:150px;">Demo</td>
                         <td style="width:150px;">Demo</td>
                         <td style="width:150px;">Demo</td>
