--- a/QuickZip/ClientApp/app/master/downloadoldmandate/downloadoldmandate.component.html
+++ b/QuickZip/ClientApp/app/master/downloadoldmandate/downloadoldmandate.component.html
@@ -254,7 +254,7 @@
                 <div class=" btfooter">
 
 
-                    <button type="button" class="btn btn-primary " (click)="RejectData(FromDate.value,ToDate.value,RejectedReason.value,selected.value)" style="width:48%; margin-right:4%">Reject</button>
+                    <button type="button" class="btn btn-primary "  data-dismiss="modal" (click)="RejectData(FromDate.value,ToDate.value,RejectedReason.value,selected.value)" style="width:48%; margin-right:4%">Reject</button>
                     <button type="button" class="btn btn-primary" (click)="hide()" data-dismiss="modal" style="width:48%">Cancel</button>
                 </div>
             </div>
