--- a/QuickZip/ClientApp/app/master/bulk-emandate/bulk-emandate.component.html
+++ b/QuickZip/ClientApp/app/master/bulk-emandate/bulk-emandate.component.html
@@ -15,7 +15,7 @@
                     </span>
                     <span id="btnspa">
                         <i class="fa fa-download" aria-hidden="true"></i>
-                        <input type="button" class=" btn btn-success" id="btnexcel"
+                        <input type="button" class=" btn btn-success" id="btnexcel" (click)="downloadExcel()"
                                value="Download Excel" />
                     </span>
                 </div>
@@ -49,27 +49,28 @@
                 </tbody>
 
             </table>
-            <div class="col-md-6 col-sm-6 col-xs-6" style="float: right">
-                <div class="toolbar pull-right">
-                    <ul class="toolbar-content">
-                        
-                        <li>
-                            <div style="color: #1f497d; margin-top: 8%;font-weight: bold;">
-                                Showing
-                                <label>{{topVal}}</label>
-                                of
-                                <label>150</label>
-                            </div>
-                        </li>
-                        <li id="">
-                            <i class="" aria-hidden="true" title="Save"></i>
-                            <input type="button" id="btnLoadMore" class="btn btn-primary" (click)="pagenext()" style="border: 1px solid #fff;padding: 3px 5px 3px 5px;font-size: 12px;" value="Load More" />
-                        </li>
-                       
-                    </ul>
-                </div>
-            </div>
 
+
+        </div>
+        <div class="col-md-6 col-sm-6 col-xs-6" style="float: right">
+            <div class="toolbar pull-right">
+                <ul class="toolbar-content">
+
+                    <li>
+                        <div style="color: #1f497d; margin-top: 8%;font-weight: bold;">
+                            Showing
+                            <label>{{topVal}}</label>
+                            of
+                            <label>{{count}}</label>
+                        </div>
+                    </li>
+                    <li id="">
+                        <i class="" aria-hidden="true" title="Save"></i>
+                        <input type="button" id="btnLoadMore" class="btn btn-primary" (click)="pagenext()" style="border: 1px solid #fff;padding: 3px 5px 3px 5px;font-size: 12px;" value="Load More" />
+                    </li>
+
+                </ul>
+            </div>
         </div>
 
 
